hledger/test/errors/assertions.j
#!/usr/bin/env -S hledger check -f

1/1
  a  0 = 1
